--- a/html/index.html
+++ b/html/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>sonido [PsychoPy]</title>
+    <title>piloto2 [PsychoPy]</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="user-scalable=no">
 
@@ -28,13 +28,13 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/pako/1.0.10/pako.min.js"></script>
 
     <!-- experiment -->
-    <script type='module' src='./sonido.js'></script>
+    <script type='module' src='./piloto2.js'></script>
 
     <!-- legacy browsers -->
     <script nomodule type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/babel-polyfill/7.6.0/polyfill.min.js"></script>
     <script nomodule type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/url-search-params/1.1.0/url-search-params.js"></script>
     <script nomodule type="text/javascript" src="https://lib.pavlovia.org/psychojs-2020.2.js"></script>
-    <script nomodule type="text/javascript" src="./sonido-legacy-browsers.js"></script>
+    <script nomodule type="text/javascript" src="./piloto2-legacy-browsers.js"></script>
 </body>
 
 </html>
