--- a/html/index.html
+++ b/html/index.html
@@ -34,7 +34,7 @@
     <script nomodule type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/babel-polyfill/7.6.0/polyfill.min.js"></script>
     <script nomodule type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/url-search-params/1.1.0/url-search-params.js"></script>
     <script nomodule type="text/javascript" src="https://lib.pavlovia.org/psychojs-2020.2.js"></script>
-    <script nomodule type="text/javascript" src="./piloto2.js"></script>
+    <script nomodule type="text/javascript" src="./piloto2-legacy-browsers.js"></script>
 </body>
 
 </html>
